--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "label": "build",
             "type":"shell",
             "command": "qmake && make && rm Makefile .qmake.stash",
+            "problemMatcher": "$gcc",
             "group": {
                 "kind": "build",
                 "isDefault": true
